cart fix, and header during customization does not have gap

--- a/app/src/css/components/Cart.scss
+++ b/app/src/css/components/Cart.scss
@@ -24,6 +24,7 @@
   padding-bottom: 20px;
   border-bottom: 1px solid $c-light-gray;
   box-shadow: 0 3px 2px -2px $c-super-light-gray;
+  line-height: 24px;
 }
 
 .Cart__single-product-description {
