--- a/app/src/css/components/CustomizationButtonLedge.scss
+++ b/app/src/css/components/CustomizationButtonLedge.scss
@@ -5,7 +5,7 @@
   text-align: center;
   bottom: 0;
   box-shadow: $box-shadow-top;
-  z-index: $z-max;
+  z-index: 2;
 }
 
 .CustomizationButtonLedge .ButtonLedge .ButtonLedge__button-wrapper {
